themes/recreative_apparel/style.css
/* ... */
.imageBackground {
  position: absolute;
  top: 30%;
  left: 150%;
  -webkit-transform: scale(4.5);
          transform: scale(4.5); }

/*========================
text - contenedor 
====================*/
.text-recycle {
  margin-top: 40px;
  line-height: 1.5rem;
  overflow: hidden; }
  @media (min-width: 600px) {
    .text-recycle {
      margin-top: -70vh;
      display: inline-block;
      left: 46%;
      margin-left: 40vw;
      right: initial;
      /* top: 20%; */
      top: 90vh;
      width: 45%; } }

.lateralMovement {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 360vw; }
  @media (min-width: 600px) {
    .lateralMovement {
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -ms-flex-direction: column;
      flex-direction: column; } }

.story-recycle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 90vw;
  margin: 0 5vw; }
  .story-recycle h2 {
    color: #0545b2;
    margin-bottom: 1rem; }
  .story-recycle p {
    font-size: 0.6rem; }
    @media (min-width: 600px) {
      .story-recycle p {
        margin-bottom: 100px;
        font-size: 1rem; } }
  .story-recycle img {
    width: 100%; }
  @media (min-width: 600px) {
    .story-recycle {
      width: 40vw;
      min-width: 10vw; } }

.arrow-down {
  display: none; }
  @media (min-width: 600px) {
    .arrow-down {
      display: block;
      position: -webkit-sticky;
      position: sticky;
      text-align: right;
      margin-right: 33vw;
      top: 90%;
      z-index: 4;
      font-size: 2rem;
      cursor: pointer; } }

.arrow-up {
  display: none; }
  @media (min-width: 600px) {
    .arrow-up {
      display: block;
      position: -webkit-sticky;
      position: sticky;
      text-align: right;
      margin-top: 20vh;
      margin-right: 33vw;
      top: 10%;
      z-index: 4;
      font-size: 2rem;
      cursor: pointer; } }

.whiter {
  display: none;
  background: white;
  padding: 20px 0;
  position: -webkit-sticky;
  position: sticky;
  height: auto;
  top: 50px;
  width: 100%;
  z-index: 0; }
  @media (min-width: 600px) {
    .whiter {
      background: transparent;
      display: block; } }

.shop-header {
  height: 10vh; }

.shop-content-wrapper {
  height: 80vh; }

.shop-content h1 {
  text-align: center;
  font-size: 16px; }
  @media (min-width: 768px) {
    .shop-content h1 {
      font-size: 20px; } }

.shop-content p {
  text-align: center;
  font-size: 16px; }
  @media (min-width: 768px) {
    .shop-content p {
      font-size: 20px; } }

.rc-logo {
  background-image: url("../../images/rclogo.svg");
  position: fixed;
  width: 100%;
  height: 27px;
  margin-top: 20px;
  background-repeat: no-repeat;
  left: 26%;
  top: 20px; }
  @media (min-width: 768px) {
    .rc-logo {
      left: 37%; } }
  @media (min-width: 1024px) {
    .rc-logo {
      left: 41%; } }

.rc-shop-logo {
  background-image: url("../../images/rclogo.svg");
  position: absolute;
  width: 100%;
  height: 27px;
  margin-top: 20px;
  background-repeat: no-repeat;
  left: 26%; }
  @media (min-width: 768px) {
    .rc-shop-logo {
      left: 37%; } }
  @media (min-width: 1024px) {
    .rc-shop-logo {
      left: 41%; } }

html {
  margin-top: 0; }

.menu-toggle {
  display: none; }

.frontpage-top-content {
  height: 53vh; }
  @media (min-width: 768px) {
    .frontpage-top-content {
      height: 90vh; } }
  @media (min-width: 1024px) {
    .frontpage-top-content {
      height: 90vh; } }
  .frontpage-top-content .ra-logo {
    background-image: url(../../images/RA-logo.svg);
    position: absolute;
    width: 80px;
    height: 80px;
    margin-left: 20px;
    margin-top: 9px;
    z-index: 999;
    background-size: 78%;
    background-repeat: no-repeat; }
    @media (min-width: 768px) {
      .frontpage-top-content .ra-logo {
        width: 102px;
        height: 102px;
        margin-top: 44px; } }
    @media (min-width: 1024px) {
      .frontpage-top-content .ra-logo {
        background-image: none; } }
  .frontpage-top-content .image-class {
    height: 62vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: right;
    position: relative;
    bottom: 20%;
    width: 102%; }
    @media (min-width: 768px) {
      .frontpage-top-content .image-class {
        position: unset;
        bottom: unset;
        height: 90vh; } }
    @media (min-width: 1024px) {
      .frontpage-top-content .image-class {
        background-size: cover; } }

.frontpage-content {
  margin: 0; }
  @media (min-width: 1024px) {
    .frontpage-content {
      top: 0px;
      margin: 0 auto;
      background-repeat: no-repeat;
      background-color: #fff;
      position: absolute;
      height: 90vh;
      width: 48%; } }
  .frontpage-content .ra-front-page-logo {
    display: none;
    position: fixed; }
    @media (min-width: 1024px) {
      .frontpage-content .ra-front-page-logo {
        background-image: url("../../images/RA-blue-logo.svg");
        width: 102px;
        height: 102px;
        margin-left: 20px;
        margin-top: 50px;
        display: inherit;
        background-size: 90%;
        background-repeat: no-repeat; } }
    @media (min-width: 1920px) {
      .frontpage-content .ra-front-page-logo {
        width: 160px;
        height: 160px; } }
  .frontpage-content .ra-statement {
    width: 269px;
    line-height: 1.7;
    margin-left: 20px;
    font-family: Avenir Book;
    font-size: 27px;
    color: #0545b2;
    font-weight: bolder;
    margin-top: 30px; }
    @media (min-width: 768px) {
      .frontpage-content .ra-statement {
        width: 359px;
        margin-bottom: 0;
        margin-left: 100px;
        margin-top: 44px; } }
    @media (min-width: 1024px) {
      .frontpage-content .ra-statement {
        margin-top: 200px;
        width: 240px;
        font-size: 23px; } }
/* ... */

